finished 8ball dom manipulation

--- a/8_ball.html
+++ b/8_ball.html
@@ -1,16 +1,16 @@
 <html>
   <head>
-    <script type= "text/javascript" src="dom.js"> </script>
+    <script type= "text/javascript" src="8_ball.js"> </script>
     <title>8_ball_Dom</title>
   </head>
   <body>
-    <h1>Even Odd</h1>
-    <input id="your-name" type= "text" placeholder= "First name"  />
-    <input id="user-input" type= "text" />
-    <input id="click-submit" type= "button" value="submit" onClick= "highLow()"/>
-    <h2 id="result"> Your guess is ... </h2>
-    <form method="get" action="file:///Users/learn/Desktop/dom/dom.html">
-        <button type="submit">Play Again!</button>
+    <h1>8 ball</h1>
+    <!-- <input id="your-name" type= "text" placeholder= "First name"  /> -->
+    <input id="user-question" type= "text" value= "Question"/>
+    <input id="click-submit" type= "button" value="submit" onClick= "eightBall()"/>
+    <h2 id="result"> And the answer is ... </h2>
+    <form method="get" action="file:///Users/learn/Desktop/dom/8_ball.html">
+        <button type="submit">Ask Again!</button>
     </form>
 
     </p>
